@@ -18,7 +18,7 @@ Code changes:
 - reorganized source file tree
 - use GNU autotools for installation instead of python distutils
 - use GtkUIManager for UI generation and management
-- added unittests for io module
+- added unittests for datahandler and io module
 
 
 2004-08-30: Revelation 0.3.3
